# pycharm_bug

./: .gitignore  Makefile  pyproject.toml
pycharm_bug/: utils.py
tests/: conftest.py
tests/sub_dir/: test_utils.py
