[tool.poetry]
name = "pycharm_bug"
version = "0.0.1"
description = "Bug demonstrator"
authors = [""]
license = "Private"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.dev-dependencies]
types-pyyaml = "^6.0.1"
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.64.7.13"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
